# kura

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  analyze_cluster_distribution.py  analyze_levels_and_overlaps.py  main.py  mkdocs.yml  output.txt  plan.md  proposal.md  pyproject.toml  question_distribution_by_level.csv  requirements.txt  spillover_questions_analysis.csv  terminal.py  test_minibatch_kmeans.py  test_parquet_implementation.py
.github/workflows/: publish.yml  pyright.yml
cache/summaries/: cache.db
comparison_checkpoints/: summaries.jsonl
data/checkpoints_mt_bench/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl  summaries.jsonl
data/checkpoints_mt_bench_10k/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl
data/checkpoints_mt_bench_10k_hdbscan/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl
data/checkpoints_mt_bench_10k_kmeans/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl
data/checkpoints_mt_bench_2/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl  summaries.jsonl
data/logfire_test_1/: conversations.jsonl  summaries.jsonl
data/logfire_test_2/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl  summaries.jsonl
data/logfire_test_3/: clusters.jsonl  dimensionality.jsonl  meta_clusters.jsonl
data/summary_itr/: conversations.jsonl  summaries.jsonl
docs/: index.md
docs/api/: index.md
docs/assets/: conversations.json  (+1 more)
kura/: __init__.py  checkpoint.py  cluster.py  dimensionality.py  embedding.py  hdbscan.py  kura.py  meta_cluster.py  summarisation.py  utils.py  visualization.py
scripts/: compare_checkpoint_formats.py  tutorial_procedural_api.py
tests/: test_checkpoints_unified.py  test_embedding.py  test_parquet_checkpoint.py
(+48 files in other folders)
