[project]
name = "kura"
version = "0.5.2"
description = "Kura is a tool for analysing and visualising chat data"
readme = "README.md"
authors = [
    { name = "Ivan Leo", email = "ivanleomk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "uvicorn>=0.34.0",
    "fastapi[standard]>=0.115.6",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "eval-type-backport>=0.2.2",
    "jsonref>=1.1.0",
    "instructor>=1.8.3",
    "thefuzz>=0.22.1",
    "typer>=0.9.0",
    "sqlmodel>=0.0.14",
    "datasets>=3.6.0",
    "diskcache>=5.6.3",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
include = [
  "kura/",
]
exclude = [
  "kura/**/__pycache__",
]

[tool.hatch.build.targets.wheel.force-include]
"kura/static/dist" = "kura/static/dist"

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
    "datasets>=3.6.0",
]
parquet = [
    "pyarrow>=10.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "cohere>=5.0.0",
]


[project.scripts]
kura = "kura.cli.cli:app"

[tool.pytest.ini_options]
addopts = "--ignore=scripts/tutorial_procedural_api.py --ignore=scripts/tutorial_class_api.py --ignore=load_testing"

[tool.pyright]
include = ["kura"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/tests/**",
]

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
